# Tauri-AI-Window

./: .gitignore  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: console.json  content.json  tabbar.json
src-tauri/inject/: link_intercept.js  url_watch.js  visibility_fix.js
src-tauri/src/: inject_scripts.rs  lib.rs  state.rs  webview_mem.rs  webview_suspend.rs
src-tauri/src/commands/: bookmark.rs  download.rs  history.rs  link.rs  mod.rs  navigation.rs  profile.rs  tab.rs  window.rs
ui/: console.html  console.js  newtab.html  newtab.js  tabbar.html  tabbar.js
