[package]
name = "app"
version = "0.1.0"
description = "Tauri AI Window v2.0 - Multi-tab AI chat browser"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "app"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["unstable"] }
parking_lot = "0.12"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
dirs = "5"

# §2.1: 非アクティブタブの WebView2 MemoryUsageTargetLevel を Low/Normal へ切り替えるための
# COM 直呼び (ICoreWebView2_19::SetMemoryUsageTargetLevel)。Windows 限定。
# バージョンは Cargo.lock の解決結果 (Tauri 2.11.2 / wry 0.55.1 が内部利用する版) に合わせる。
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [] }

# L0: リリースビルドのサイズ最適化 (軽量化計画 詳細設計書 §4)。
# panic="abort" は自前コードで catch_unwind 非使用を確認済み。opt-level は z(最小)を起点に、
# 体感劣化があれば s へ後退する (計測ログ §A 参照)。lto/codegen-units=1 はビルド時間増と引き換え。
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
